chore: leverage Java 11 Files.readString